--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "license": "ISC",
   "dependencies": {
     "prop-types": "^15.5.10",
-    "react": "^15.4.2"
+    "react": "^15.4.2",
+    "rimble-ui": "^0.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
